adelantando componente contenido

--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,12 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+.scrollbar-hide {
+  -ms-overflow-style: none; /* Ocultar en IE y Edge */
+  scrollbar-width: none; /* Ocultar en Firefox */
+}
+
+.scrollbar-hide::-webkit-scrollbar {
+  display: none; /* Ocultar en Chrome, Safari y Opera */
+}
